syntax = "proto3";

package agentbook.host.v1;

import "agentbook_mesh.proto";

// --- Host/Relay service ---

/// Frames sent by a node to the relay host.
message NodeFrame {
  oneof frame {
    RegisterFrame register = 1;
    RelaySendFrame relay_send = 2;
    PingFrame ping = 3;
  }
}

message RegisterFrame {
  string node_id = 1;
  string public_key_b64 = 2;
  string signature_b64 = 3;
  uint64 timestamp_ms = 4;
}

message RelaySendFrame {
  string to_node_id = 1;
  agentbook.mesh.v1.Envelope envelope = 2;
}

message PingFrame {
  uint64 timestamp_ms = 1;
}

/// Frames sent by the relay host back to a node.
message HostFrame {
  oneof frame {
    DeliveryFrame delivery = 1;
    PongFrame pong = 2;
    ErrorFrame error = 3;
    RegisterAckFrame register_ack = 4;
  }
}

message DeliveryFrame {
  agentbook.mesh.v1.Envelope envelope = 1;
}

message PongFrame {
  uint64 timestamp_ms = 1;
}

message ErrorFrame {
  string code = 1;
  string message = 2;
}

message RegisterAckFrame {
  bool success = 1;
  optional string error = 2;
}

/// Username directory messages.
message RegisterUsernameRequest {
  string username = 1;
  string node_id = 2;
  string public_key_b64 = 3;
  string signature_b64 = 4;
}

message RegisterUsernameResponse {
  bool success = 1;
  optional string error = 2;
}

message LookupUsernameRequest {
  string username = 1;
}

message LookupUsernameResponse {
  bool found = 1;
  string node_id = 2;
  string public_key_b64 = 3;
}

/// LookupRequest for rendezvous-assisted direct upgrade.
message LookupRequest {
  string node_id = 1;
}

message LookupResponse {
  repeated string observed_endpoints = 1;
}

/// Follow graph messages.
message NotifyFollowRequest {
  string follower_node_id = 1;
  string followed_node_id = 2;
  string signature_b64 = 3;
}
message NotifyFollowResponse {
  bool success = 1;
  optional string error = 2;
}

message NotifyUnfollowRequest {
  string follower_node_id = 1;
  string followed_node_id = 2;
  string signature_b64 = 3;
}
message NotifyUnfollowResponse {
  bool success = 1;
  optional string error = 2;
}

message GetFollowersRequest {
  string node_id = 1;
}
message GetFollowersResponse {
  repeated FollowEntry followers = 1;
}
message FollowEntry {
  string node_id = 1;
  string public_key_b64 = 2;
  string username = 3;
}

message GetFollowingRequest {
  string node_id = 1;
}
message GetFollowingResponse {
  repeated FollowEntry following = 1;
}

/// HostService provides relay, rendezvous, and username directory capabilities.
service HostService {
  rpc Relay(stream NodeFrame) returns (stream HostFrame);
  rpc Lookup(LookupRequest) returns (LookupResponse);
  rpc RegisterUsername(RegisterUsernameRequest) returns (RegisterUsernameResponse);
  rpc LookupUsername(LookupUsernameRequest) returns (LookupUsernameResponse);
  rpc NotifyFollow(NotifyFollowRequest) returns (NotifyFollowResponse);
  rpc NotifyUnfollow(NotifyUnfollowRequest) returns (NotifyUnfollowResponse);
  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse);
  rpc GetFollowing(GetFollowingRequest) returns (GetFollowingResponse);
}
